tic-tac-toe included
completed tic-tac-toe page

--- a/CSS/Basic_Slideshow.css
+++ b/CSS/Basic_Slideshow.css
@@ -18,6 +18,8 @@
   max-width: 1000px;
   position: relative;
   margin: auto;
+  border: 2px solid black;
+  border-radius: 4px;
 }
 
 /* Hide images by default */
