Add Pizza Project
Added pizza builder

--- a/Calculator/css/calculator_css.css
+++ b/Calculator/css/calculator_css.css
@@ -1,4 +1,5 @@
 html {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 70%;
     box-sizing: border-box;
 }
